argo/networkpolicy-argo-argocd-application-controller.yaml
# Source: argo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.4
  name: argo-argocd-application-controller
  namespace: argo
  annotations:
    noa.re/deploy-id: 69c76c6a7861e127
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
      app.kubernetes.io/instance: argo
  policyTypes:
  - Ingress
